--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <meta charset="utf-8">
 <style type="text/css">
@@ -34,7 +34,6 @@ a:active {
 <body>
 <!-- css -->
 <div id="shixi" class="smwindow" onClick="xiaoshi()"><img src="images/shixi.png"></div>
-<div id="huojiang" class="smwindow"><img src="images/huojiang.png"></div>
 <div id="section1" class="heizi">
 <img src="images/陈雅婷.jpg" width="200" id="myphoto" alt="myphoto" onMouseOver="">
 <h1>陈雅婷</h1>
